--- a/css/stars.css
+++ b/css/stars.css
@@ -20,19 +20,17 @@ body {
   font-weight: bold;
   font-size: 1.5em;
   color: #333;
-  width: 100%;
+  width: 230px;
 }
 .odometer {
   background: #444;
   color: #fff;
-  padding: 13px 21px 11px;
+  padding: 13px 16px 11px;
   margin: auto;
   line-height: 1 !important;
   font-size: 1.5em;
   border-radius: 0 4px 4px 0;
-  position: absolute !important;
-  right: 0;
-  top: 10px;
+  font-weight: bold;
 }
 .subtitle {
   padding-left: 13px;
