--- a/css/stars.css
+++ b/css/stars.css
@@ -9,6 +9,7 @@ body {
   font-size: 16px;
   position: relative;
   min-width: 320px;
+  display: inline-block;
 }
 .label {
   background: #eee;
@@ -33,6 +34,6 @@ body {
   font-weight: bold;
 }
 .subtitle {
-  padding-left: 13px;
   opacity: 0.7;
+  text-align: center
 }
