--- a/css/stars.css
+++ b/css/stars.css
@@ -3,7 +3,6 @@ body {
 }
 .content {
   padding: 10px;
-  margin-bottom: 6px;
   font-family: "Helvetica Neue",Helvetica,arial,sans-serif;
   box-sizing: border-box;
   font-size: 16px;
@@ -34,6 +33,7 @@ body {
   font-weight: bold;
 }
 .subtitle {
-  opacity: 0.7;
-  text-align: center
+  color: #444;
+  text-align: center;
+  padding-top: 2px;
 }
