--- a/css/stars.css
+++ b/css/stars.css
@@ -117,6 +117,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
+  border-radius: 4px;
   overflow: hidden;
   font-size: .2em;
   display: inline-block;
@@ -137,7 +138,6 @@ body {
   width: 100%;
   height: 100%;
   background: #eee;
-  border-radius: 4px 0 0 4px;
 }
 
 .label-wrap {
@@ -176,7 +176,6 @@ body {
   height: 100%;
   background: #444;
   color: #eee;
-  border-radius: 0 4px 4px 0;
 }
 
 .odometer-wrap {
@@ -204,7 +203,7 @@ body {
   padding-top: 2px;
 }
 
-.twitter .odometer {
+.twitter .odometer-wrap {
   background: #55aace;
 }
 
